--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+   padding: 5rem;
+}
+
+#root {
+   display: flex;
+   flex-direction: column;
+}
+
+main {
+   display: flex;
+   flex-direction: column;
+   padding: 2.5rem;
+}
