--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,99 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-   padding: 5rem;
+@layer base {
+   .max-width {
+      max-width: 1550px;
+      margin: auto;
+   }
+
+   html {
+      min-height: 100vh;
+      font-family: "DynaPuff", cursive;
+      letter-spacing: 0.025em;
+      background-color: #f3f3f4;
+   }
+
+   body {
+      @apply max-width;
+      min-height: 100vh;
+   }
+
+   #root,
+   page {
+      min-height: 100vh;
+   }
+
+   main {
+      padding: 40px 40px 24px;
+   }
+
+   p {
+      font-size: 1.125rem;
+      line-height: 1.75rem;
+      color: #3f3f46;
+   }
+
+   h3 {
+      padding: 0.7rem 0 1.2rem;
+      font-size: 1.25rem;
+      font-weight: 600;
+      text-align: center;
+      color: #3f3f46;
+   }
 }
 
-#root {
-   display: flex;
-   flex-direction: column;
+@layer components {
+   .btn {
+      margin: 3rem 0;
+      padding: 1rem 2rem;
+      font-size: 1.5rem;
+      font-weight: 500;
+      line-height: 2rem;
+      color: #f3f3f4;
+      border-radius: 0.75rem;
+   }
+
+   .green-btn {
+      @apply btn;
+      background-color: #797b34;
+      border: 4px solid #c0c556;
+      box-shadow: 0 2px 5px 0 #3a3c18;
+   }
+
+   .black-btn {
+      background-color: #1c1c1c;
+      border: 3px solid #f3f3f4;
+      box-shadow: 0 2px 5px 0 #3a3c18;
+   }
+
+   .red-btn {
+      background-color: #e54647;
+      border: 3px solid #f3f3f4;
+      box-shadow: 0 2px 5px 0 #3a3c18;
+   }
 }
 
-main {
-   display: flex;
-   flex-direction: column;
-   padding: 2.5rem;
+.green-btn:active {
+   transform: scale(0.98);
+   border: 4px solid #6d7024;
+   box-shadow: inset 0 2px 5px 0 #21220b;
+}
+
+.black-btn:active {
+   transform: scale(0.98);
+   background-color: #373737;
+   border: 3px solid #686868;
+   box-shadow: inset 0 2px 5px 0px #1c1c1c;
+}
+
+.red-btn:active {
+   transform: scale(0.98);
+   background-color: #ee1a1cb5;
+   border: 3px solid #e54647;
+   box-shadow: inset 0 2px 5px 0px #1c1c1c;
+}
+
+.push-effect:active {
+   box-shadow: inset 0 2px 7px 0 #6a6a6a;
 }
