--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "styles/animation";
 
 @layer base {
    .max-width {
@@ -42,6 +43,10 @@
       text-align: center;
       color: #3f3f46;
    }
+
+   img {
+      object-fit: cover;
+   }
 }
 
 @layer components {
@@ -73,28 +78,4 @@
       border: 3px solid #f3f3f4;
       box-shadow: 0 2px 5px 0 #3a3c18;
    }
-}
-
-.green-btn:active {
-   transform: scale(0.98);
-   border: 4px solid #6d7024;
-   box-shadow: inset 0 2px 5px 0 #21220b;
-}
-
-.black-btn:active {
-   transform: scale(0.98);
-   background-color: #373737;
-   border: 3px solid #686868;
-   box-shadow: inset 0 2px 5px 0px #1c1c1c;
-}
-
-.red-btn:active {
-   transform: scale(0.98);
-   background-color: #ee1a1cb5;
-   border: 3px solid #e54647;
-   box-shadow: inset 0 2px 5px 0px #1c1c1c;
-}
-
-.push-effect:active {
-   box-shadow: inset 0 2px 7px 0 #6a6a6a;
 }
