--- a/src/styles/animation.css
+++ b/src/styles/animation.css
@@ -53,6 +53,10 @@
    }
 }
 
+.shelf-effect {
+   box-shadow: 0 2px 7px 0 #6a6a6a;
+}
+
 /* -------- #Loaders -------- */
 .loader-spinner {
    display: inline-block;
